force-app/main/default/objects/vlocity_cmt__OrchestrationScenario__c/vlocity_cmt__OrchestrationScenario__c.object-meta.xml
<CustomObject>
    <label>Orchestration Scenario</label>
    <nameField>
        <label>Orchestration Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>