force-app/main/default/objects/vlocity_cmt__OrchestrationScenario__c/fields/vlocity_cmt__Action__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Action__c</fullName>
    <label>Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
                <default>true</default>
                <label>Add</label>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>NoChange</fullName>
            </value>
            <value>
                <fullName>Suspend</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>