force-app/main/default/objects/vlocity_cmt__OrchestrationScenario__c/fields/vlocity_cmt__OrchestrationPlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrchestrationPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orchestration Plan</label>
    <referenceTo>vlocity_cmt__OrchestrationPlan__c</referenceTo>
    <relationshipLabel>Orchestration Scenarios</relationshipLabel>
    <relationshipName>Orchestration_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>