force-app/main/default/objects/vlocity_cmt__OrchestrationScenario__c/validationRules/vlocity_cmt__ValidateOrchestrationScenario.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__ValidateOrchestrationScenario</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( vlocity_cmt__Action__c ), ISNULL( vlocity_cmt__Action__c) )</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__Action__c</errorDisplayField>
    <errorMessage>Action cannot be blank</errorMessage>
</ValidationRule>